# musicplayer2

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
assets/logo/: logo.xcf
assets/oa-card/: oa-card.xcf
src/: colors.ts  defs.ts  logger.ts  main.tsx  twind.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/: Albums.tsx  Bar.tsx  ColumnListing.tsx  Index.tsx  Settings.tsx  Songs.tsx  Test.tsx
src/components/player/: Controls.tsx  DisplayTrack.tsx  Player.tsx  ProgressBar.tsx
src/lib/: DiscordRPC.ts  LastFM.ts  VirtualTable.tsx  md5.ts  subsonic.ts
webos/: appinfo.json  build.sh
